Added user documentation for gnumber command.

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -373,6 +373,9 @@ Create a new group named \fIgroupf\fP, but do not select it.
 .cmd gnext
 Select the next group. Most window commands only see windows in the
 effective group.
+.cmd gnumber
+Give the number \fInew\fP to the group with the number \fIold\fP or
+the current group.
 .cmd gother
 Select the last accessed group. Most window commands only see windows in the
 effective group.
