Document the titlechanged hook.

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -218,6 +218,8 @@ but before the window in it is focused.
 \fBswitchwin\fP	Run after a new window is selected.
 (With dedication,
 it may already be inactive again, if it was put into another frame)
+.br
+\fBtitlechanged\fP Run when the current window's title changes.
 .cmd alias alias command
 Add \fIalias\fP as new way to call \fIcommand\fP.
 .cmd bind key command
