`swap' needs at least one argument.

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -776,7 +776,7 @@ Switch to the screen
 Select whether
 .Nm
 will show a startup message or not.
-.It Ic swap Oo Ar dest-frame Oo Ar src-frame Oc Oc Pq Ic C\-t x
+.It Ic swap Ar dest-frame Oo Ar src-frame Oc Pq Ic C\-t x
 Exchange the window in
 .Ar src\-frame
 (or the current frame if there is no second argument) with the window
