Make the `-pixels' case stand out for vsplit

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -832,7 +832,7 @@ Spawn a shell executing
 after showing a message with the command.
 .It Ic version Pq Ic C\-t v
 Output version and compile time information.
-.It Ic vsplit Oo Ar l Ns Li / Ns Ar p | "pixels-from-top" | "-pixels-from-bottom" Oc Pq Ic C\-t s
+.It Ic vsplit Oo Ar l Ns Li / Ns Ar p | Ar "pixels-from-top" | Li \- Ns Ar "pixels-from-bottom" Oc Pq Ic C\-t s
 Split the current frame into upper frame and a lower frame.
 If no parameter is given, split in halves.
 If two numbers separated by a slash
