--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -854,7 +854,7 @@ wide or the upper one
 high, depending whether there is a
 .Dq Li \-
 in front of the number or not.
-.It Ic warp Op Cm on | off
+.It Ic warp Cm ( on | off )
 Select if focusing a window moves the rat cursor to the place it had been last
 time this window was focused, or not.
 .It Ic windows Oo Ar format Oc Pq Ic C\-t w
