Amend the VARIABLES introduction paragraph.

--- a/doc/ratpoison.mdoc.1
+++ b/doc/ratpoison.mdoc.1
@@ -946,7 +946,7 @@ line by line. The format string can be overwritten by the optional parameter
 .Nm
 variables can be shown and set with
 .Ic set .
-There are:
+The following variables are supported:
 .Bl -tag -width Ds
 .It Cm resizeunit Ar pixels
 Set the amount of pixels interactive
